style.css
@font-face {
    font-family: "SF Pro Text";
    src: url(./fonts/SF-Pro-Text-Light.otf);
    font-weight: 300;
}
@font-face {
    font-family: "SF Pro Text";
    src: url(./fonts/SF-Pro-Text-Regular.otf);
    font-weight: 400;
}
@font-face {
    font-family: "SF Pro Text";
    src: url(./fonts/SF-Pro-Text-Medium.otf);
    font-weight: 500;
}
@font-face {
    font-family: "SF Pro Text";
    src: url(./fonts/SF-Pro-Text-Bold.otf);
    font-weight: 700;
}

:root {
    --bgColor : #F4F4F4;
    --statusColor : #FFFFFF;
    --statusBgColor: rgba(0, 0, 0, 0.25);
    --femaleColor : #D0004B;
    --femaleBgColor : #FFEAEB;
    --maleColor : #0065C2;
    --cityColor : #089C67;
    --cityBgColor : #E8FBED;
    --workColor : #4B6A87;
    --workBgColor : #F4F4F4;
    --headerColor : #303030;
    --headingsColor : #626262;
    --abbrColor : #C4C4C4;
    --cardColor : #4D4D4D;
    --cardbgColor : #FFFFFF;
    --lightColor : #818181;

    --mainFont : "SF Pro Text";
    --largerFontSize : 2rem; 
    --largeFontSize: 1.125rem;
    --mediumFontSize : 1rem;
    --regularFontSize : 0.9375rem; 
    --smallFontSize: 0.875rem; 
    --smallerFontSize : 0.75rem;
}

* {
    margin: 0;
    box-sizing: border-box;
    font-family: var(--mainFont);
}

html {
    font-size: clamp(16px, 1.5779vmax, 24px); /* Responsive text */
}

body {
    background: var(--bgColor);
}

/* COMPONENTS */
.card {
    display: flex;
    flex-direction: column;
    flex-grow: 0;
    gap: 0.625rem;
    padding: 0.75rem;
    box-shadow: 0rem 0.25rem 0.375rem rgba(0, 0, 0, 0.05);
    border-radius: 0.25rem;
    color: var(--cardColor);
    background: var(--cardbgColor);
}

.flexrow {
    display: flex;
    flex-wrap: wrap;
    gap: 0.625rem;
}

.spec {
    font-size: var(--smallFontSize);
    padding: 0.125rem 0.5625rem;
    border-radius: 0.1875rem;
    line-height: 1.0625rem;
}

.status {
    color: var(--statusColor);
    background: var(--statusBgColor);
}

.female {
    color: var(--femaleColor);
    background: var(--femaleBgColor);
}

.city {
    color: var(--cityColor);
    background: var(--cityBgColor);
}

.work {
    color: var(--workColor);
    background: var(--workBgColor);
}

.largeText {
    font-size: var(--largeFontSize);
    font-weight: 500;
}

.textMargin {
    margin: 0 3px;
}

.textS15LH21 { /*font size 15px line height 21px*/
    font-size: var(--regularFontSize);
    line-height: 1.3125rem;
}

/* Header */
header {
    color: var(--headerColor);
}

h1 {
    font-weight: 500;
}

#profile {
    display: flex;
    flex-direction: column;
    gap: 0.625rem;
    margin: 1.5625rem auto 1.5625rem 1.8125rem;
    width: 17.25rem;
}

#profileSpecs {
    gap: 0.5rem;
}

header p {
    white-space: pre-line;
}

/* Main */
main {
    display: flex;
    flex-direction: column;
    gap: 0.9375rem;
    margin: 0.9375rem 0;
}

h2 {
    color: var(--headingsColor);
    font-size: var(--smallerFontSize);
    font-weight: 400;
    line-height: 1.3125rem;
    text-transform: uppercase;
}
ul {
    list-style-type: none;
    padding: 0;
}

input {
    pointer-events:none;
}

/* Personality */
#personality img {
    width: 2.5rem;
    height: 2.5rem;
}

#personality abbr {
    text-decoration: none;
    text-transform: uppercase;
    font-size: var(--smallerFontSize);
    color: var(--abbrColor);
    font-weight: 400;
}
#personality figcaption {
    line-height: 1.3425rem;
}

/* Education */
#education ul {
    display: flex;
    flex-direction: column;
    gap: 0.625rem;
}

#education li {
    line-height: 1.3125rem;
}

#education p {
    font-size: var(--smallerFontSize);
    color: var(--lightColor);
    line-height: 1rem;
    margin-left: 17px;
    margin-right: 4px;
}

/* Work Life */

/* Hobbies */
#hobbies ul {
    gap: 0;
}

#hobbies li {
    margin-right: 0.5ch; /* small adjustment to force wrap */
}

#hobbies li:not(:last-child)::after {
    content: '\00a0•';
}

/* Digital Communities */
#digitalCommunities {
    gap: 0.5rem;
    padding: 0.5625rem 0.75rem; /*pixel perfect adjustments */
}

#digitalCommunities ul {
    line-height: 0;
}

#digitalCommunities img {
    width: 3.25rem;
    height: 3.25rem;
}

/* Digital Media */

/* Goals */

/* Frustrations */

/* -------------------------------------------------------- */

/* Media Queries */

